bugfix overflow

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -5,12 +5,14 @@
     min-height: 100vh;
     display: flex;
     align-items: center;
+    overflow-x: clip;
 }
 
 .aboutMeContent {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .contentLeft {
